# plotly-chartstudio-tutorial

./: .gitignore  Pipfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
plotly_chartstudio_tutorial/: __init__.py  api.py  chart.py  data.py  log.py
